--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
+  --foreground-rgb: 33, 33, 33;
+  --background-rgb: 245, 245, 245;
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -20,7 +25,13 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-rgb));
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
 }
